# npc-neural-affect-matrix

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-to-windows.sh  build.rs  build.sh
.cargo/: config.toml
src/: lib.rs  main.rs
src/_test_mock/: emotion_mock.rs  memory_mock.rs  mod.rs
src/api/: endpoints.rs  mod.rs  types.rs
src/api/services/: evaluator_service.rs  memory_service.rs  mod.rs  validation_service.rs
src/config/: mod.rs  npc_config.rs
src/modules/: mod.rs
src/modules/emotion/: mod.rs  predictor.rs
src/modules/memory/: evaluator.rs  mod.rs  store.rs
src/utils/: downloader.rs  mod.rs  model_manager.rs  setup.rs
tests/: config_tests.rs  emotion_tests.rs  memory_tests.rs
tests/mock/: emotion_mock.rs  memory_mock.rs  mod.rs
