[package]
name = "npc-neural-affect-matrix"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed 'Moe' Diallo <mdiallo.av@gmail.com>"]
description = "A neural affect matrix system for NPCs"
license = "MIT"
default-run = "npc-neural-affect-matrix"

[lib]
name = "npc_neural_affect_matrix"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "npc-neural-affect-matrix"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
tokenizers = "0.22.1"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries"] }
ndarray = "0.16"
lazy_static = "1.5.0"

[dev-dependencies]
rustfmt = "0.10.0"
