[package]
name = "npc-neural-affect-matrix"
version = "0.0.1"
edition = "2021"
authors = ["Mohamed 'Mavdol' Diallo"]
description = "A neural affect matrix system for NPCs"
license = "MIT"
repository = "https://github.com/mavdol/npc-neural-affect-matrix"
readme = "README.md"
keywords = ["npc", "emotion", "ml", "affect", "neural-network", "valence-arousal", "personality"]
categories = ["game-development", "algorithms"]
default-run = "npc-neural-affect-matrix"

[lib]
name = "npc_neural_affect_matrix"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "npc-neural-affect-matrix"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
tokenizers = "0.22.1"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries"] }
ndarray = "0.16"
lazy_static = "1.5.0"

[dev-dependencies]
